tests/neg/i16343.scala
class Issue16343:
  class MyWorker extends javax.swing.SwingWorker[Unit, Unit] // error
